# clip-app

./: .gitignore  Dockerfile.clip-server  Dockerfile.fastapi  README.md  clip_qdrant_server.py  clip_qdrant_server_claude.py  clip_qdrant_server_doubao.py  demo.py  demo1.py  demo2.py  demo_rank_images_by_text.py  docker-compose.yaml  label_config.py  main.py  pyproject.toml  requirements.txt  search_flow.yaml  server.py  start_clip_server.sh  startup_simple.py  tag_pic.py
demo/: demo.py  demo_rank_images_by_text.py  sentence_search_pic.py
faiss_data/: image_index.faiss  image_metadata.json
qdrant/config/: production.yaml
workspace/AnnLiteIndexer/0/cell_0/: 000009.sst  000017.sst  IDENTITY  LOG  LOG.old.1758037561640598  LOG.old.1758040458533816  LOG.old.1758073231871426  LOG.old.1758099251395670  LOG.old.1758100392219846  MANIFEST-000013  MANIFEST-000021  MANIFEST-000025  MANIFEST-000033  OPTIONS-000015
