[project]
name = "clip-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clip-client>=0.8.3",
    "clip-server[search]>=0.8.3",
    "cn-clip>=1.6.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "jina[qdrant]>=3.34.0",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.23.1",
]
